# django-location-app

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
example/example/: asgi.py  settings.py  urls.py  wsgi.py
location_app/: admin.py  conf.py  forms.py  models.py  urls.py  views.py  widgets.py
location_app/migrations/: 0001_initial.py
location_app/static/location_app/js/: location.js
location_app/templates/location_app/: location.html
