# setup.cfg

[metadata]
name = django-location-app
version = 1.0.0
description = A Django app that helps you easily manage your own location data with autocomplete function. Connect your app to a completely normalized location database, avoid redundant Google Map API queries and save your hard earned money.
long_description = file:README.md
url = https://github.com/AnmolChachra/django-location-app
license = MIT
classifiers =
    Development Status :: 1 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools == 44.0.0
install_requires =
	Django==3.1.7
	django-crispy-forms==1.11.1
	pytz==2021.1
	sqlparse==0.4.1

[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:djlocation/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
	.git,
	.tox
	docs/source/conf.py,
	build,
	dist
max-line-length = 79